--- a/9.4/Dockerfile
+++ b/9.4/Dockerfile
@@ -36,7 +36,8 @@ RUN yum install -y centos-release-scl epel-release && \
 # Loosen permission bits to avoid problems running container with arbitrary UID
 ADD root /
 RUN /usr/libexec/fix-permissions /var/lib/pgsql && \
-    /usr/libexec/fix-permissions /var/run/postgresql
+    /usr/libexec/fix-permissions /var/run/postgresql && \
+    chmod -R 0700 /var/lib/pgsql
 
 # Get prefix path and path to scripts rather than hard-code them in scripts
 ENV CONTAINER_SCRIPTS_PATH=/usr/share/container-scripts/postgresql \
